chapter_argocd/app/Kustomize/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-by-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: dev.kustomize.argocd.vmXX.handson.cloudnativedays.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: handson
            port:
              name: http
